# vivint-decode

./: .gitignore  Cargo.toml  README.md  flake.nix  package.nix
.github/workflows/: cd.yml  ci.yml
src/: cipher.rs  frame.rs  lib.rs  main.rs
tests/: cli.rs
